[Add] mainの背景色（緑、ライムグリーン）

--- a/index.html
+++ b/index.html
@@ -11,6 +11,17 @@
 	<div class="main-visual">
 		
 	</div>
+	<div class="main clearfix">
+		<div class="side-left">
+			
+		</div>
+		<div class="center">
+			
+		</div>
+		<div class="side-right">
+			
+		</div>
+	</div>
 
 </body>
 </html>
